# terraform-analysis-agent

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  idea.md  pyproject.toml  setup.py
.cursor/rules/: projectrule.mdc
common/: qdrant_client.py  utils.py
scripts/: process_data.py
src/: config.py  main.py  utils.py
tests/: test_qdrant_client.py
utils/: utils.py
