[project]
name = "terraform-analysis-agent"
version = "0.1.0"
description = "MCP server for Terraform error debugging using RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "chromadb>=0.4.22",
    "gitpython>=3.1.42",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "qdrant-client>=1.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]
